Move external files into public folder

--- a/views/bookmarks/highlights.mustache
+++ b/views/bookmarks/highlights.mustache
@@ -43,7 +43,7 @@
 {{> include}}
 {{> menu }}
 {{> navbar }}
-<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+<script src="/js/simplemde.min.js"></script>
 <script>
     $(document).ready(function () {
 
