--- a/views/books/all.mustache
+++ b/views/books/all.mustache
@@ -105,9 +105,8 @@
 {{> navbar }}
 {{> add-book }}
 
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/dkern/jquery.lazy@1.7.10/jquery.lazy.min.js"></script>
-<script type="text/javascript" src="//cdn.jsdelivr.net/gh/dkern/jquery.lazy@1.7.10/jquery.lazy.plugins.min.js"></script>
-
+<script type="text/javascript" src="/js/jquery.lazy.min.js"></script>
+<script type="text/javascript" src="/js/jquery.lazy.plugins.min.js"></script>
 
 <script>
     $(document).ready(function () {
