--- a/views/highlights/details.mustache
+++ b/views/highlights/details.mustache
@@ -161,7 +161,7 @@
 {{> menu }}
 {{> navbar }}
 
-<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
+<script src="/js/simplemde.min.js"></script>
 <script>
     $(document).ready(function () {
 
