--- a/views/bookmarks/index.mustache
+++ b/views/bookmarks/index.mustache
@@ -35,7 +35,7 @@
                     <div>
                         {{#bookmarkCategories}}
                         <a role="button" href="/bookmarks{{#href}}?tag={{tag}}{{/href}}" class="badge badge-{{badge}}">
-                            <strong>#{{tag}}</strong>
+                            <strong>#{{tag}} ({{tag_count}})</strong>
                             </a>
                         {{/bookmarkCategories}}
                     </div>
