--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -68,8 +68,7 @@
 
                     <div>
                         {{#headerTags}}
-                        <a role="button" href="/highlights{{#href}}?tag={{href}}{{/href}}" class="badge badge-{{badge}}
-                            ">
+                        <a role="button" href="/highlights{{#href}}?tag={{href}}{{/href}}" class="badge badge-{{badge}}">
                             <strong>#{{tag}} ({{tag_count}})</strong>
                             </a>
                         {{/headerTags}}
@@ -88,7 +87,7 @@
                                 {{{highlight}}}
 
                                 <footer class="blockquote-footer">
-                                    {{author}} <cite>{{source}}</cite> ~ {{created_at_formatted}}
+                                    {{author}} <cite>{{source}}</cite> ~ {{created_at_formatted}}/{{updated_at_formatted}}
 
                                     {{#tags}}
                                         <br><br>
