--- a/views/books/index.mustache
+++ b/views/books/index.mustache
@@ -39,6 +39,12 @@
                                                 </div>
                                             {{/amount}}
 
+                                            <div class="form-group custom-control custom-checkbox">
+                                                <input id="cb-{{bookUID}}" type="checkbox" class="custom-control-input">
+                                                <label class="custom-control-label" for="cb-{{bookUID}}">Read
+                                                    yesterday</label>
+                                            </div>
+
                                             {{^remove}}
                                                 <div>
                                                     <button class="btn btn-sm btn-danger btnRemoveFromPath"
@@ -68,43 +74,33 @@
 
 <script>
     $(document).ready(function () {
-        var initBooks = function () {
+        $(".btnAddAmount").on('click', function (e) {
 
-            bindingsBooks();
-        };
+            var bookUID = $(this).data("id");
+            var readYesterdayCheckboxValue = $('#cb-' + bookUID).is(":checked") ? 1 : 0;
+            var amount = $('#' + bookUID).val();
+            var pathUID = $(this).data("path");
+            var result = ajaxCall('POST', "/books/" + bookUID + "/progress", "amount=" + amount + "&pathUID=" + pathUID + "&readYesterday=" + readYesterdayCheckboxValue)
 
-        var bindingsBooks = function () {
+            if (result !== false) {
+                $('#' + bookUID).val('');
+                location.reload();
+            }
 
-            $(".btnAddAmount").on('click', function (e) {
+        });
 
-                var bookUID = $(this).data("id");
-                var amount = $('#' + bookUID).val();
-                var pathUID = $(this).data("path");
-                var result = ajaxCall('POST', "/books/" + bookUID + "/progress", "amount=" + amount + "&pathUID=" + pathUID)
+        $(".btnRemoveFromPath").on('click', function (e) {
 
-                if (result !== false) {
-                    $('#' + bookUID).val('');
-                    location.reload();
-                }
+            var bookUID = $(this).data("id");
+            var pathUID = $(this).data("path");
+            var divId = $(this).data("div");
+            var result = ajaxCall('DELETE', "/books/paths/" + pathUID, "bookUID=" + bookUID)
 
-            });
+            if (result !== false) {
+                $('#' + divId).remove();
+            }
 
-            $(".btnRemoveFromPath").on('click', function (e) {
-
-                var bookUID = $(this).data("id");
-                var pathUID = $(this).data("path");
-                var divId = $(this).data("div");
-                var result = ajaxCall('DELETE', "/books/paths/" + pathUID, "bookUID=" + bookUID)
-
-                if (result !== false) {
-                    $('#' + divId).remove();
-                }
-
-            });
-
-        };
-
-        initBooks();
+        });
     });
 </script>
 </body>
