--- a/views/highlights/details.mustache
+++ b/views/highlights/details.mustache
@@ -45,13 +45,16 @@
                                         <input id="source" placeholder="Source" type="text" class="form-control"
                                                value="{{source}}">
                                     </div>
-                                    <div class="form-group">
-                                        <input id="page" placeholder="Page" type="number" class="form-control"
-                                               value="{{page}}">
-                                    </div>
-                                    <div class="form-group">
-                                        <input id="location" placeholder="Location" type="text" class="form-control"
-                                               value="{{location}}">
+
+                                    <div class="form-row">
+                                        <div class="form-group col-md-6">
+                                            <input id="page" placeholder="Page" type="number" class="form-control"
+                                                   value="{{page}}">
+                                        </div>
+                                        <div class="form-group col-md-6">
+                                            <input id="location" placeholder="Location" type="text" class="form-control"
+                                                   value="{{location}}">
+                                        </div>
                                     </div>
 
                                     {{#link}}
