Add navbar and collapse left menu

--- a/views/bookmarks/highlights.mustache
+++ b/views/bookmarks/highlights.mustache
@@ -8,6 +8,7 @@
 </head>
 
 <body class="vertical dark">
+{{> navbar }}
 <div class="wrapper">
     <main role="main" class="main-content">
         <div class="container-fluid">
