--- a/views/bookmarks/index.mustache
+++ b/views/bookmarks/index.mustache
@@ -6,6 +6,7 @@
 </head>
 
 <body class="vertical dark">
+{{> navbar }}
 <div class="wrapper">
     <main role="main" class="main-content">
         <div class="container-fluid">
@@ -80,9 +81,11 @@
                                                        data-uid="{{bookmarkUID}}">
                                                         <i class="fe fe-trash fe-4"></i>
                                                     </a>
-                                                    {{#keyword}}<span class="badge badge-pill badge-primary float-right">{{keyword}}</span>{{/keyword}}
-                                                    {{#imploded_tags}}<span class="badge badge-pill badge-warning float-right">{{imploded_tags}}</span>{{/imploded_tags}}
-                                                    </a>
+                                                    {{#keyword}}
+                                                        <span class="badge badge-pill badge-primary float-right">{{keyword}}</span>{{/keyword}}
+                                                    {{#imploded_tags}}
+                                                        <span class="badge badge-pill badge-warning float-right">{{imploded_tags}}</span>{{/imploded_tags}}
+                                                </a>
                                             </td>
                                             <td>
                                                 {{created}}
