--- a/views/books/all.mustache
+++ b/views/books/all.mustache
@@ -5,7 +5,8 @@
     {{> head }}
 </head>
 
-<body class="vertical  dark">
+<body class="vertical dark">
+{{> navbar }}
 <div class="wrapper">
     <main role="main" class="main-content">
         <div class="container-fluid">
