--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -19,6 +19,7 @@
 </head>
 
 <body class="vertical dark">
+{{> navbar }}
 <div class="wrapper">
     <nav class="topnav navbar navbar-light">
         <input id="searchHighlights" class="form-control mr-sm-2 bg-transparent border-0 pl-4 text-muted" type="search"
