--- a/views/books/finished.mustache
+++ b/views/books/finished.mustache
@@ -6,6 +6,7 @@
 </head>
 
 <body class="vertical dark">
+{{> navbar }}
 <div class="wrapper">
     <main role="main" class="main-content">
         <div class="container-fluid">
