--- a/views/home.mustache
+++ b/views/home.mustache
@@ -5,6 +5,7 @@
 </head>
 <body class="vertical dark">
 <div class="wrapper">
+    {{> navbar }}
     <main role="main" class="main-content">
         <div class="container-fluid">
             <div class="row justify-content-center">
