Fix search form redirection problem

--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -24,11 +24,8 @@
         <button type="button" class="navbar-toggler text-muted mt-2 p-0 mr-3 collapseSidebar">
             <i class="fe fe-menu navbar-toggler-icon"></i>
         </button>
-        <form class="form-inline mr-auto searchform text-muted">
-            <input id="searchHighlights" class="form-control mr-sm-2 bg-transparent border-0 pl-4 text-muted"
-                   type="search"
-                   placeholder="Search Highlights" aria-label="Search">
-        </form>
+        <input id="searchHighlights" class="nav form-control bg-transparent border-0 pl-4 text-muted"
+               type="search" placeholder="Search Highlights" aria-label="Search">
     </nav>
     <main role="main" class="main-content">
         <div class="container-fluid">
