Add ebook label

--- a/views/books/all.mustache
+++ b/views/books/all.mustache
@@ -63,6 +63,10 @@
                                                 {{^info_link}}
                                                     {{author}} - {{title}}
                                                 {{/info_link}}
+
+                                                {{#ebook}}
+                                                    <span class="badge badge-pill badge-success float-right">Ebook</span>
+                                                {{/ebook}}
                                             </td>
                                             <td style="width:4%">{{page_count}}</td>
                                             <td style="width:7%">
