--- a/views/highlights/index.mustache
+++ b/views/highlights/index.mustache
@@ -53,8 +53,12 @@
                                 <br>
 
                                 <div class="form-row">
-                                    <div class="form-group col-9">
+                                    <div class="form-group col-6">
                                         <input id="tags" placeholder="Tags" type="text"
+                                               class="form-control enterButtonKeyPress">
+                                    </div>
+                                    <div class="form-group col-3">
+                                        <input id="blogPath" placeholder="Blog Path" type="text"
                                                class="form-control enterButtonKeyPress">
                                     </div>
                                     <div class="form-group col-3">
@@ -224,6 +228,7 @@
                 var page = $('#page').val();
                 var tags = $('#tags').val();
                 var is_encrypted = $('#is_encrypted').val();
+                var blogPath = $('#blogPath').val();
 
                 var data = "highlight=" + encodeURIComponent(highlight) +
                         "&author=" + encodeURIComponent(author) +
@@ -231,6 +236,7 @@
                         "&page=" + encodeURIComponent(page) +
                         "&tags=" + encodeURIComponent(tags) +
                         "&filename=" + encodeURIComponent(fileName) +
+                        "&blogPath=" + encodeURIComponent(blogPath) +
                         "&is_encrypted=" + encodeURIComponent(is_encrypted);
                 var result = ajaxCall('POST', "/highlights", data)
 
