Remove base_url usage

--- a/views/highlights/details.mustache
+++ b/views/highlights/details.mustache
@@ -180,7 +180,7 @@
             var simplemdeHighlight = new SimpleMDE({
                 element: $("#highlight")[0],
                 toolbar: ["bold", "italic", "strikethrough", "heading", "code", "quote", "unordered-list", "ordered-list", "clean-block", "link", "image", "table", "horizontal-rule", "preview"],
-                insertTexts: {"image": ["[", "]({{base_url}}/img/)"]},
+                insertTexts: {"image": ["[", "](/img/)"]},
             });
             $('#highlight').show();
         }
@@ -188,7 +188,7 @@
         var simplemdeComment = new SimpleMDE({
             element: $("#comment")[0],
             toolbar: ["bold", "italic", "strikethrough", "heading", "code", "quote", "unordered-list", "ordered-list", "clean-block", "link", "image", "table", "horizontal-rule", "preview"],
-            insertTexts: {"image": ["[", "]({{base_url}}/img/)"]},
+            insertTexts: {"image": ["[", "](/img/)"]},
         });
         $('#comment').show();
 
