--- a/views/logs.mustache
+++ b/views/logs.mustache
@@ -62,7 +62,7 @@
         var simplemde = new SimpleMDE({
             element: $("#logTextArea")[0],
             toolbar: ["bold", "italic", "strikethrough", "heading", "code", "quote", "unordered-list", "ordered-list", "clean-block", "link", "image", "table", "horizontal-rule", "preview"],
-            insertTexts: {"image": ["[", "]({{base_url}}/img/)"]},
+            insertTexts: {"image": ["[", "](/img/)"]},
         });
 
         $('#logTextArea').show();
