--- a/views/logs.mustache
+++ b/views/logs.mustache
@@ -55,6 +55,7 @@
 {{> include}}
 {{> menu }}
 <script src="/js/simplemde.min.js"></script>
+<script src="/js/codemirror-4.inline-attachment.min.js"></script>
 
 <script>
     $(document).ready(function () {
@@ -66,6 +67,10 @@
         });
 
         $('#logTextArea').show();
+
+        inlineAttachment.editors.codemirror4.attach(simplemde.codemirror, {
+            uploadUrl: '/images'
+        });
 
         $("#saveLog").on('click', function (e) {
 
