--- a/views/include/head.mustache
+++ b/views/include/head.mustache
@@ -7,8 +7,7 @@
 <!-- Simple bar CSS -->
 <link rel="stylesheet" href="/css/simplebar.css">
 <!-- Fonts CSS -->
-<link href="https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,100;0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap"
-      rel="stylesheet">
+<link href="/css/fonts.googleapis.com.css2.css" rel="stylesheet">
 
 <link rel="stylesheet" href="/css/dataTables.bootstrap4.css">
 
